2012-05-23  Michael Nordman  <michaeln@google.com>

        [chromium] DomStorage events handling needs TLC (3)
        https://bugs.webkit.org/show_bug.cgi?id=87031
        https://code.google.com/p/chromium/issues/detail?id=128482
        Only queue storage events for Documents which have allocated
        a WebCore::Storage instance since pages that have attached onstorage
        event handlers must have a non-null Storage instance.

        Reviewed by Adam Barth.

        * src/StorageAreaProxy.cpp:
        (WebCore::StorageAreaProxy::dispatchLocalStorageEvent):
        (WebCore::StorageAreaProxy::dispatchSessionStorageEvent):
        (WebCore::StorageAreaProxy::isEventSource):

2012-05-23  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r118218.
        http://trac.webkit.org/changeset/118218
        https://bugs.webkit.org/show_bug.cgi?id=87299

        breaks webkit win builder (Requested by pilgrim_google__ on
        #webkit).

        * WebKit.gyp:
        * public/platform/WebKitPlatformSupport.h:
        (WebKitPlatformSupport):
        (WebKit::WebKitPlatformSupport::queryLocalizedString):
        * public/platform/WebLocalizedString.h:
        (WebKit):
        * src/LocalizedStrings.cpp:
        (WebCore::query):

2012-05-23  Mark Pilgrim  <pilgrim@chromium.org>

        [Chromium] Move themeEngine to Platform.h
        https://bugs.webkit.org/show_bug.cgi?id=87268

        Reviewed by Adam Barth.

        Part of a refactoring series. See tracking bug 82948.

        * WebKit.gyp:
        * public/platform/WebKitPlatformSupport.h:
        (WebKit):
        (WebKit::WebKitPlatformSupport::sandboxSupport):
        * public/platform/android/WebThemeEngine.h:
        * public/platform/linux/WebThemeEngine.h:
        * public/platform/mac/WebThemeEngine.h:
        * public/platform/win/WebThemeEngine.h:
        * src/AssertMatchingEnums.cpp:
        * src/PlatformSupport.cpp:
        (WebCore::PlatformSupport::paintButton):